# PyProt

./: .gitignore  MasterAli.pir  MasterAli_old.pir  MasterAli_older.pir  Model.py  PyProt.py  README.md  requirements.txt  setup.cfg
Pyprot/: Model.py  PyProtein.py  __init__.py
