[metadata]
name = pyprot
version = 0.0.1
author = Jure Fabjan
author_email = jure.fabjan93@gmail.com
description = Tools for protein sequence download and structural modelling
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/JureFabjan/ligand_dock_project
project_urls =
    Bug Tracker = https://github.com/JureFabjan/ligand_dock_project/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir = 
    '' = '.'
packages = 
  Pyprot
include_package_data = True

install_requires =
    biopython
    modeller
    pandas
